@@ -53,11 +53,6 @@ public class WizardController extends BasicController {
 	private Link finishButton;
 	private Link cancelButton;
 
-	/**
-	 * @param ureq
-	 * @param wControl
-	 * @param steps
-	 */
 	public WizardController(UserRequest ureq, WindowControl wControl, int steps) {
 		super(ureq, wControl);
 		
@@ -75,46 +70,20 @@ public class WizardController extends BasicController {
 		wizardVC.put("wic", wic.getInitialComponent());
 		putInitialPanel(wizardVC);
 	}
-	
-	public String getAndRemoveWizardTitle() {
-		String wizardTitle = (String)wizardVC.contextGet("wizardTitle");
-		wizardVC.contextRemove("wizardTitle");
-		return wizardTitle;
-	}
 
-	/**
-	 * @param wizardTitle
-	 */
 	public void setWizardTitle(String wizardTitle) {
 		wizardVC.contextPut("wizardTitle", wizardTitle);
 	}
 
-	/**
-	 * @param stepTitle
-	 * @param component
-	 */
-	public void setBackWizardStep(String stepTitle, Component component) {
-		this.currentStep--;
-		setWizardVcContent(stepTitle, component);
-	}
-	
-	/**
-	 * @param stepTitle
-	 * @param component
-	 */
 	public void setNextWizardStep(String stepTitle, Component component) {
 		this.currentStep++;
 		setWizardVcContent(stepTitle, component);
 	}
 
-	/**
-	 * @param title
-	 * @param component
-	 */
 	private void setWizardVcContent(String title, Component component) {
 		wic.setCurStep(this.currentStep);
-		wizardVC.contextPut("currentStep", new Integer(currentStep));
-		wizardVC.contextPut("steps", new Integer(steps));
+		wizardVC.contextPut("currentStep", Integer.valueOf(currentStep));
+		wizardVC.contextPut("steps", Integer.valueOf(steps));
 		wizardVC.contextPut("title", title);
 		if(currentStep == steps){
 			wizardVC.contextPut("lastStep", Boolean.TRUE);
@@ -124,19 +93,14 @@ public class WizardController extends BasicController {
 		wizardVC.put("component", component);
 	}
 
-	/**
-	 * @see org.olat.core.gui.control.DefaultController#event(org.olat.core.gui.UserRequest,
-	 *      org.olat.core.gui.components.Component, org.olat.core.gui.control.Event)
-	 */
+	@Override
 	public void event(UserRequest ureq, Component source, Event event) {
 		if (source == finishButton || source == cancelButton) {
 			fireEvent(ureq, Event.CANCELLED_EVENT);
 		}
 	}
 
-	/**
-	 * @see org.olat.core.gui.control.DefaultController#doDispose(boolean)
-	 */
+	@Override
 	protected void doDispose() {
 		//
 	}
