@@ -56,6 +56,7 @@ import org.olat.core.util.event.GenericEventListener;
 import org.olat.core.util.mail.MailBundle;
 import org.olat.core.util.prefs.Preferences;
 import org.olat.core.util.resource.OresHelper;
+import org.olat.core.util.resource.WindowedResourceableList;
 import org.olat.core.util.vfs.VFSContainer;
 import org.olat.course.CourseModule;
 import org.olat.course.DisposedCourseRestartController;
@@ -138,6 +139,7 @@ public class QTI21AssessmentRunController extends BasicController implements Gen
 	private final QTI21OverrideOptions overrideOptions;
 	// The test is really assessment not a self test or a survey
 	private final boolean assessmentType = true;
+	private final WindowedResourceableList resourceList;
 	private AtomicBoolean incrementAttempts = new AtomicBoolean(true);
 	
 	private AssessmentResultController resultCtrl;
@@ -171,6 +173,12 @@ public class QTI21AssessmentRunController extends BasicController implements Gen
 		singleUserEventCenter = userSession.getSingleUserEventCenter();
 		mainVC = createVelocityContainer("assessment_run");
 		mainVC.setDomReplaceable(false); // DOM ID set in velocity
+		
+		resourceList = userSession.getResourceList();
+		if(!resourceList.registerResourceable(userCourseEnv.getCourseEnvironment().getCourseGroupManager().getCourseEntry(),
+				courseNode.getIdent(), getWindow())) {
+			showWarning("warning.multi.window");
+		}
 		
 		disclaimerVC = createVelocityContainer("assessment_disclaimer");
 		disclaimerVC.setDomReplacementWrapperRequired(false);
@@ -273,9 +281,9 @@ public class QTI21AssessmentRunController extends BasicController implements Gen
 				mainVC.contextPut("passed", scoreEval.getPassed());
 				mainVC.contextPut("attempts", attempts); //at least one attempt
 				mainVC.contextPut("showChangeLog", Boolean.TRUE && enableScoreInfo);
-				exposeResults(ureq, true);
+				exposeResults(ureq, true, scoreEval.getPassed() != null && scoreEval.getPassed().booleanValue());
 			} else {
-				exposeResults(ureq, false);
+				exposeResults(ureq, false, false);
 			}
 		} else if(courseNode instanceof IQTESTCourseNode) {
 			IQTESTCourseNode testCourseNode = (IQTESTCourseNode)courseNode;
@@ -294,11 +302,11 @@ public class QTI21AssessmentRunController extends BasicController implements Gen
 					mainVC.contextPut("enableScoreInfo", Boolean.FALSE);
 				}
 			} else {
-				Boolean passed = assessmentEntry.getPassed();
+				boolean passed = assessmentEntry.getPassed() != null && assessmentEntry.getPassed().booleanValue();
 				//block if test passed (and config set to check it)
 				Boolean blocked = Boolean.FALSE;
 				boolean blockAfterSuccess = deliveryOptions.isBlockAfterSuccess();
-				if(blockAfterSuccess && passed != null && passed.booleanValue()) {
+				if(blockAfterSuccess && passed) {
 					blocked = Boolean.TRUE;
 				}
 				mainVC.contextPut("blockAfterSuccess", blocked);
@@ -306,7 +314,7 @@ public class QTI21AssessmentRunController extends BasicController implements Gen
 				boolean resultsVisible = assessmentEntry.getUserVisibility() == null || assessmentEntry.getUserVisibility().booleanValue();
 				mainVC.contextPut("resultsVisible", resultsVisible);
 				mainVC.contextPut("score", AssessmentHelper.getRoundedScore(assessmentEntry.getScore()));
-				mainVC.contextPut("hasPassedValue", (passed == null ? Boolean.FALSE : Boolean.TRUE));
+				mainVC.contextPut("hasPassedValue", (assessmentEntry.getPassed() == null ? Boolean.FALSE : Boolean.TRUE));
 				mainVC.contextPut("passed", passed);
 				if(resultsVisible) {
 					if(assessmentConfig.hasComment()) {
@@ -349,7 +357,7 @@ public class QTI21AssessmentRunController extends BasicController implements Gen
 					}
 				}
 
-				exposeResults(ureq, resultsVisible);
+				exposeResults(ureq, resultsVisible, passed);
 			}
 		}
 	}
@@ -360,12 +368,12 @@ public class QTI21AssessmentRunController extends BasicController implements Gen
 		
 		boolean dependOnDate = config.getBooleanSafe(IQEditController.CONFIG_KEY_DATE_DEPENDENT_TEST, false);
 		if(dependOnDate) {
-			Date startTestDate = config.getDateValue(IQEditController.CONFIG_KEY_RESULTS_START_TEST_DATE);
+			Date startTestDate = config.getDateValue(IQEditController.CONFIG_KEY_START_TEST_DATE);
 			if(startTestDate != null) {
 				Formatter formatter = Formatter.getInstance(getLocale());
 				mainVC.contextPut("startTestDate", formatter.formatDateAndTime(startTestDate));
 				
-				Date endTestDate = config.getDateValue(IQEditController.CONFIG_KEY_RESULTS_END_TEST_DATE);
+				Date endTestDate = config.getDateValue(IQEditController.CONFIG_KEY_END_TEST_DATE);
 				if(endTestDate != null) {
 					mainVC.contextPut("endTestDate", formatter.formatDateAndTime(endTestDate));
 				}
@@ -401,15 +409,16 @@ public class QTI21AssessmentRunController extends BasicController implements Gen
 	 * in the velocity template and the CONFIG_KEY_RESULT_ON_HOME_PAGE is not editable
 	 * in the configuration of the course element for QTI 2.1!!!!
 	 * 
-	 * Provides the show results button if results available or a message with the visibility period.
+	 * Provides the show results button if results available or a message with the visibility period 
+	 * if there is difference when displaying passed or failed results.
 	 * 
 	 * @param ureq
 	 */
-	private void exposeResults(UserRequest ureq, boolean resultsVisible) {
+	private void exposeResults(UserRequest ureq, boolean resultsAvailable, boolean passed) {
 		//migration: check if old tests have no summary configured
 		boolean showResultsOnHomePage = config.getBooleanSafe(IQEditController.CONFIG_KEY_RESULT_ON_HOME_PAGE);
 		QTI21AssessmentResultsOptions showSummary = deliveryOptions.getAssessmentResultsOptions();
-		if(resultsVisible && !showSummary.none()) {
+		if(resultsAvailable && !showSummary.none()) {
 			mainVC.contextPut("showResultsOnHomePage", Boolean.valueOf(showResultsOnHomePage));			
 			boolean dateRelatedVisibility = isResultVisible(config);		
 			if(showResultsOnHomePage && dateRelatedVisibility) {
@@ -426,61 +435,262 @@ public class QTI21AssessmentRunController extends BasicController implements Gen
 				if(isPanelOpen(ureq, "results", true)) {
 					doShowResults(ureq);
 				}
-			} else if(showResultsOnHomePage) {
-				exposeVisiblityPeriod();
-				mainVC.contextPut("showResultsVisible", Boolean.FALSE);
 			} else {
-				exposeVisiblityPeriod();
+				exposeVisiblityPeriod(passed);
 				mainVC.contextPut("showResultsVisible", Boolean.FALSE);
 			}
 		} else {
-			exposeVisiblityPeriod();
+			exposeVisiblityPeriod(passed);
 			mainVC.contextPut("showResultsVisible", Boolean.FALSE);
 			mainVC.contextPut("showResultsOnHomePage", Boolean.valueOf(showResultsOnHomePage && !showSummary.none()));	
 		}
 		
-		if(!anonym && resultsVisible && userCourseEnv.isParticipant()) {
+		if(!anonym && resultsAvailable && userCourseEnv.isParticipant()) {
 			UserNodeAuditManager am = userCourseEnv.getCourseEnvironment().getAuditManager();
 			String userLog = am.getUserNodeLog(courseNode, getIdentity());
 			mainVC.contextPut("log", StringHelper.escapeHtml(userLog));	
 		}
 	}
 	
-	private void exposeVisiblityPeriod() {
-		boolean showResultsActive = config.getBooleanSafe(IQEditController.CONFIG_KEY_DATE_DEPENDENT_RESULTS);
-		Date startDate = config.getDateValue(IQEditController.CONFIG_KEY_RESULTS_START_DATE);
-		Date endDate = config.getDateValue(IQEditController.CONFIG_KEY_RESULTS_END_DATE);
-		if(showResultsActive && startDate != null) {
-			Formatter formatter = Formatter.getInstance(getLocale());
-			String visibilityStartDate = formatter.formatDate(startDate);
-			String visibilityEndDate = "-";
-			if(endDate != null) {
-				visibilityEndDate = formatter.formatDate(endDate);
+	private void exposeVisiblityPeriod(boolean passed) {
+		String showResultsActive = config.getStringValue(IQEditController.CONFIG_KEY_DATE_DEPENDENT_RESULTS);
+		
+		if (showResultsActive != null) {
+			Date startDate;
+			Date endDate;
+			Date currentDate = new Date();
+
+			switch (showResultsActive) {
+			case IQEditController.CONFIG_VALUE_DATE_DEPENDENT_RESULT_ALWAYS:
+				mainVC.contextPut("visibilityPeriod", translate("showResults.visibility.future"));
+				break;
+			case IQEditController.CONFIG_VALUE_DATE_DEPENDENT_RESULT_DIFFERENT:
+				if (passed) {
+					startDate = config.getDateValue(IQEditController.CONFIG_KEY_RESULTS_PASSED_START_DATE);
+					endDate = config.getDateValue(IQEditController.CONFIG_KEY_RESULTS_PASSED_END_DATE);
+
+					if(startDate != null && currentDate.before(startDate)) {
+						Formatter formatter = Formatter.getInstance(getLocale());
+						String visibilityStartDate = formatter.formatDateAndTime(startDate);
+						String visibilityEndDate = "-";
+						if(endDate != null && currentDate.before(endDate)) {
+							visibilityEndDate = formatter.formatDateAndTime(endDate);
+						} else if(endDate != null && currentDate.after(endDate)) {
+							String visibilityPeriod = translate("showResults.visibility.past");
+							mainVC.contextPut("visibilityPeriod", visibilityPeriod);
+							break;
+						}
+						String visibilityPeriod = translate("showResults.visibility", new String[] { visibilityStartDate, visibilityEndDate });
+						mainVC.contextPut("visibilityPeriod", visibilityPeriod);
+						break;
+					}
+				} else {
+					startDate = config.getDateValue(IQEditController.CONFIG_KEY_RESULTS_FAILED_START_DATE);
+					endDate = config.getDateValue(IQEditController.CONFIG_KEY_RESULTS_FAILED_END_DATE);
+
+					if(startDate != null && currentDate.before(startDate)) {
+						Formatter formatter = Formatter.getInstance(getLocale());
+						String visibilityStartDate = formatter.formatDateAndTime(startDate);
+						String visibilityEndDate = "-";
+						if(endDate != null && currentDate.before(endDate)) {
+							visibilityEndDate = formatter.formatDateAndTime(endDate);
+						} else if(endDate != null && currentDate.after(endDate)) {
+							String visibilityPeriod = translate("showResults.visibility.past");
+							mainVC.contextPut("visibilityPeriod", visibilityPeriod);
+							break;
+						}
+						String visibilityPeriod = translate("showResults.visibility", new String[] { visibilityStartDate, visibilityEndDate });
+						mainVC.contextPut("visibilityPeriod", visibilityPeriod);
+						break;
+					}
+				}
+				mainVC.contextPut("visibilityPeriod", translate("showResults.visibility.future"));
+				break;
+			case IQEditController.CONFIG_VALUE_DATE_DEPENDENT_RESULT_FAILED_ONLY:
+				if (!passed) {
+					startDate = config.getDateValue(IQEditController.CONFIG_KEY_RESULTS_FAILED_START_DATE);
+					endDate = config.getDateValue(IQEditController.CONFIG_KEY_RESULTS_FAILED_END_DATE);
+
+					if(startDate != null && currentDate.before(startDate)) {
+						Formatter formatter = Formatter.getInstance(getLocale());
+						String visibilityStartDate = formatter.formatDateAndTime(startDate);
+						String visibilityEndDate = "-";
+						if(endDate != null && currentDate.before(endDate)) {
+							visibilityEndDate = formatter.formatDateAndTime(endDate);
+						} else if(endDate != null && currentDate.after(endDate)) {
+							String visibilityPeriod = translate("showResults.visibility.past");
+							mainVC.contextPut("visibilityPeriod", visibilityPeriod);
+							break;
+						}
+						String visibilityPeriod = translate("showResults.visibility", new String[] { visibilityStartDate, visibilityEndDate });
+						mainVC.contextPut("visibilityPeriod", visibilityPeriod);
+						break;
+					}
+				} else {
+					mainVC.contextPut("showResultsOnHomePage", Boolean.valueOf(false));
+					break;
+				}
+				mainVC.contextPut("visibilityPeriod", translate("showResults.visibility.future"));
+				break;
+			case IQEditController.CONFIG_VALUE_DATE_DEPENDENT_RESULT_PASSED_ONLY:
+				if (passed) {
+					startDate = config.getDateValue(IQEditController.CONFIG_KEY_RESULTS_FAILED_START_DATE);
+					endDate = config.getDateValue(IQEditController.CONFIG_KEY_RESULTS_FAILED_END_DATE);
+
+					if(startDate != null && currentDate.before(startDate)) {
+						Formatter formatter = Formatter.getInstance(getLocale());
+						String visibilityStartDate = formatter.formatDateAndTime(startDate);
+						String visibilityEndDate = "-";
+						if(endDate != null && currentDate.before(endDate)) {
+							visibilityEndDate = formatter.formatDateAndTime(endDate);
+						} else if(endDate != null && currentDate.after(endDate)) {
+							String visibilityPeriod = translate("showResults.visibility.past");
+							mainVC.contextPut("visibilityPeriod", visibilityPeriod);
+							break;
+						}
+						String visibilityPeriod = translate("showResults.visibility", new String[] { visibilityStartDate, visibilityEndDate });
+						mainVC.contextPut("visibilityPeriod", visibilityPeriod);
+						break;
+					}
+				} else {
+					mainVC.contextPut("showResultsOnHomePage", Boolean.valueOf(false));
+					break;
+				}
+				mainVC.contextPut("visibilityPeriod", translate("showResults.visibility.future"));
+				break;
+			case IQEditController.CONFIG_VALUE_DATE_DEPENDENT_RESULT_SAME:
+				startDate = config.getDateValue(IQEditController.CONFIG_KEY_RESULTS_START_DATE);
+				endDate = config.getDateValue(IQEditController.CONFIG_KEY_RESULTS_END_DATE);
+
+				if(startDate != null && currentDate.before(startDate)) {
+					Formatter formatter = Formatter.getInstance(getLocale());
+					String visibilityStartDate = formatter.formatDateAndTime(startDate);
+					String visibilityEndDate = "-";
+					if(endDate != null && currentDate.before(endDate)) {
+						visibilityEndDate = formatter.formatDateAndTime(endDate);
+					} else if(endDate != null && currentDate.after(endDate)) {
+						String visibilityPeriod = translate("showResults.visibility.past");
+						mainVC.contextPut("visibilityPeriod", visibilityPeriod);
+						break;
+					}
+					String visibilityPeriod = translate("showResults.visibility", new String[] { visibilityStartDate, visibilityEndDate });
+					mainVC.contextPut("visibilityPeriod", visibilityPeriod);
+					break;
+				}
+				mainVC.contextPut("visibilityPeriod", translate("showResults.visibility.future"));
+				break;
+			default:
+				mainVC.contextPut("visibilityPeriod", translate("showResults.visibility.future"));
+				break;
 			}
-			String visibilityPeriod = translate("showResults.visibility", new String[] { visibilityStartDate, visibilityEndDate });
-			mainVC.contextPut("visibilityPeriod", visibilityPeriod);
-		} else {
-			mainVC.contextPut("visibilityPeriod", translate("showResults.visibility.future"));
 		}
 	}
 	
+	/**
+	 * Evaluates if the results are visble or not in respect of the configured CONFIG_KEY_DATE_DEPENDENT_RESULTS parameter. <br>
+	 * The results are always visible if not date dependent.
+	 * EndDate could be null, that is there is no restriction for the end date.
+	 * 
+	 * @return true if is visible.
+	 */
 	private boolean isResultVisible(ModuleConfiguration modConfig) {
 		boolean isVisible = false;
-		boolean showResultsActive = modConfig.getBooleanSafe(IQEditController.CONFIG_KEY_DATE_DEPENDENT_RESULTS);
-		if(showResultsActive) {
-			Date startDate = modConfig.getDateValue(IQEditController.CONFIG_KEY_RESULTS_START_DATE);
-			Date endDate = modConfig.getDateValue(IQEditController.CONFIG_KEY_RESULTS_END_DATE);
-			if(startDate == null && endDate == null) {
-				isVisible = true;
-			} else {
-				Date currentDate = new Date();
-				if(startDate != null && currentDate.after(startDate) && (endDate == null || currentDate.before(endDate))) {
-					isVisible = true;
-				}
-			}
-		} else {
+		String showResultsActive = modConfig.getStringValue(IQEditController.CONFIG_KEY_DATE_DEPENDENT_RESULTS, IQEditController.CONFIG_VALUE_DATE_DEPENDENT_RESULT_ALWAYS);
+		Date startDate, endDate;
+		Date passedStartDate, passedEndDate;
+		Date failedStartDate, failedEndDate;
+		ScoreEvaluation scoreEval = courseAssessmentService.getAssessmentEvaluation(courseNode, userCourseEnv);
+		
+		switch (showResultsActive) {
+		case IQEditController.CONFIG_VALUE_DATE_DEPENDENT_RESULT_ALWAYS:
 			isVisible = true;
+			break;
+		case IQEditController.CONFIG_VALUE_DATE_DEPENDENT_RESULT_DIFFERENT:
+			passedStartDate = modConfig.getDateValue(IQEditController.CONFIG_KEY_RESULTS_PASSED_START_DATE);
+			passedEndDate = modConfig.getDateValue(IQEditController.CONFIG_KEY_RESULTS_PASSED_END_DATE);
+			failedStartDate = modConfig.getDateValue(IQEditController.CONFIG_KEY_RESULTS_FAILED_START_DATE);
+			failedEndDate = modConfig.getDateValue(IQEditController.CONFIG_KEY_RESULTS_FAILED_END_DATE);
+			
+			isVisible = isResultVisible(scoreEval, passedStartDate, passedEndDate, failedStartDate, failedEndDate);
+			break;
+		case IQEditController.CONFIG_VALUE_DATE_DEPENDENT_RESULT_FAILED_ONLY:
+			failedStartDate = modConfig.getDateValue(IQEditController.CONFIG_KEY_RESULTS_FAILED_START_DATE);
+			failedEndDate = modConfig.getDateValue(IQEditController.CONFIG_KEY_RESULTS_FAILED_END_DATE);
+			
+			isVisible = isResultVisibleFailedOnly(scoreEval, failedStartDate, failedEndDate);
+			break;
+		case IQEditController.CONFIG_VALUE_DATE_DEPENDENT_RESULT_PASSED_ONLY:
+			passedStartDate = modConfig.getDateValue(IQEditController.CONFIG_KEY_RESULTS_FAILED_START_DATE);
+			passedEndDate = modConfig.getDateValue(IQEditController.CONFIG_KEY_RESULTS_FAILED_END_DATE);
+			
+			isVisible = isResultVisiblePassedOnly(scoreEval, passedStartDate, passedEndDate);
+			break;
+		case IQEditController.CONFIG_VALUE_DATE_DEPENDENT_RESULT_SAME:
+			startDate = modConfig.getDateValue(IQEditController.CONFIG_KEY_RESULTS_START_DATE);
+			endDate = modConfig.getDateValue(IQEditController.CONFIG_KEY_RESULTS_END_DATE);
+			isVisible = isResultVisible(startDate, endDate);
+			break;
+		default:
+			break;
 		}
+
+		return isVisible;
+	}
+	
+	private boolean isResultVisible(Date startDate, Date endDate) {
+		boolean isVisible = true;
+		Date currentDate = new Date();
+		
+		if (startDate != null && currentDate.before(startDate)) {
+			isVisible &= false;
+		} 
+		
+		if (endDate != null && currentDate.after(endDate)) {
+			isVisible &= false;
+		}
+		
+		return isVisible;
+	}
+	
+	private boolean isResultVisibleFailedOnly(ScoreEvaluation scoreEval, Date startDate, Date endDate) {
+		boolean isVisible = scoreEval != null;
+		
+		if (isVisible) {			
+			if (scoreEval.getPassed() != null && !scoreEval.getPassed()) {
+				isVisible &= isResultVisible(startDate, endDate);
+			} else {
+				isVisible &= false;
+			}
+		}
+		
+		return isVisible;
+	}
+	
+	private boolean isResultVisiblePassedOnly(ScoreEvaluation scoreEval, Date startDate, Date endDate) {
+		boolean isVisible = scoreEval != null;
+		
+		if (isVisible) {			
+			if (scoreEval.getPassed() != null && scoreEval.getPassed()) {
+				isVisible &= isResultVisible(startDate, endDate);
+			} else {
+				isVisible &= false;
+			}
+		}
+		
+		return isVisible;
+	}
+	
+	private boolean isResultVisible(ScoreEvaluation scoreEval, Date passedStartDate, Date passedEndDate, Date failedStartDate, Date failedEndDate) {
+		boolean isVisible = scoreEval != null;
+		
+		if (isVisible) {
+			if (scoreEval.getPassed() != null && scoreEval.getPassed()) {
+				isVisible &= isResultVisible(passedStartDate, passedEndDate);
+			} else {
+				isVisible &= isResultVisible(failedStartDate, failedEndDate);
+			}
+		}
+		
 		return isVisible;
 	}
 	
@@ -495,6 +705,9 @@ public class QTI21AssessmentRunController extends BasicController implements Gen
 				singleUserEventCenter.fireEventToListenersOf(assessmentStoppedEvent, assessmentEventOres);
 			}
 		}
+		
+		resourceList.deregisterResourceable(userCourseEnv.getCourseEnvironment().getCourseGroupManager().getCourseEntry(),
+				courseNode.getIdent(), getWindow());
 	}
 	
 	@Override
@@ -636,8 +849,9 @@ public class QTI21AssessmentRunController extends BasicController implements Gen
 		
 		RepositoryEntry courseRe = userCourseEnv.getCourseEnvironment().getCourseGroupManager().getCourseEntry();
 		if (!userCourseEnv.isParticipant() && courseNode instanceof IQTESTCourseNode) {
+			boolean authorMode = !ureq.getUserSession().getRoles().isGuestOnly();
 			displayCtrl = new AssessmentTestDisplayController(ureq, getWindowControl(), new InMemoryOutcomeListener(),
-					testEntry, courseRe, courseNode.getIdent(), deliveryOptions, overrideOptions, true, true, true);
+					testEntry, courseRe, courseNode.getIdent(), deliveryOptions, overrideOptions, true, authorMode, true);
 		} else {
 			displayCtrl = new AssessmentTestDisplayController(ureq, bwControl, this, testEntry, courseRe,
 					courseNode.getIdent(), deliveryOptions, overrideOptions, true, false, false);
@@ -741,7 +955,7 @@ public class QTI21AssessmentRunController extends BasicController implements Gen
 		if(!configRef) {
 			int timeLimit = config.getIntegerSafe(IQEditController.CONFIG_KEY_TIME_LIMIT, -1);
 			if(timeLimit > 0) {
-				maxTimeLimit = new Long(timeLimit);
+				maxTimeLimit = Long.valueOf(timeLimit);
 			}
 		}
 		
@@ -749,9 +963,9 @@ public class QTI21AssessmentRunController extends BasicController implements Gen
 		Date endTestDate = null;
 		boolean dependOnDate = config.getBooleanSafe(IQEditController.CONFIG_KEY_DATE_DEPENDENT_TEST, false);
 		if(dependOnDate) {
-			startTestDate = config.getDateValue(IQEditController.CONFIG_KEY_RESULTS_START_TEST_DATE);
+			startTestDate = config.getDateValue(IQEditController.CONFIG_KEY_START_TEST_DATE);
 			if(startTestDate != null) {
-				endTestDate = config.getDateValue(IQEditController.CONFIG_KEY_RESULTS_END_TEST_DATE);
+				endTestDate = config.getDateValue(IQEditController.CONFIG_KEY_END_TEST_DATE);
 			}
 		}
 		
@@ -767,7 +981,7 @@ public class QTI21AssessmentRunController extends BasicController implements Gen
 		
 		removeHistory(ureq);
 		if(userCourseEnv.isParticipant() && courseNode instanceof IQTESTCourseNode) {
-			courseAssessmentService.updateCurrentCompletion(courseNode, userCourseEnv, null, null, Role.user);
+			courseAssessmentService.updateCurrentCompletion(courseNode, userCourseEnv, null, null, null, Role.user);
 		}
 		
 		OLATResourceable ores = OresHelper.createOLATResourceableInstance("test", -1l);
@@ -844,18 +1058,19 @@ public class QTI21AssessmentRunController extends BasicController implements Gen
 	}
 
 	@Override
-	public void updateOutcomes(Float score, Boolean pass, Double completion) {
+	public void updateOutcomes(Float score, Boolean pass, Date start, Double completion) {
 		if(courseNode instanceof IQTESTCourseNode) {
-			courseAssessmentService.updateCurrentCompletion(courseNode, userCourseEnv, completion, AssessmentRunStatus.running,
+			courseAssessmentService.updateCurrentCompletion(courseNode, userCourseEnv, start, completion, AssessmentRunStatus.running,
 					Role.user);
 			coordinatorManager.getCoordinator().getEventBus()
-				.fireEventToListenersOf(new CompletionEvent(CompletionEvent.PROGRESS, courseNode.getIdent(), completion, AssessmentRunStatus.running, getIdentity().getKey()),
+				.fireEventToListenersOf(new CompletionEvent(CompletionEvent.PROGRESS, courseNode.getIdent(),
+						start, completion, AssessmentRunStatus.running, getIdentity().getKey()),
 						userCourseEnv.getCourseEnvironment().getCourseGroupManager().getCourseResource());
 		}
 	}
 
 	@Override
-	public void submit(Float score, Boolean pass, Double completion, Long assessmentId) {
+	public void submit(Float score, Boolean pass, Date start, Double completion, Long assessmentId) {
 		if(anonym) {
 			assessmentNotificationsHandler.markPublisherNews(getIdentity(), userCourseEnv.getCourseEnvironment().getCourseResourceableId());
 			return;
@@ -872,7 +1087,7 @@ public class QTI21AssessmentRunController extends BasicController implements Gen
 				assessmentStatus = AssessmentEntryStatus.done;
 				visibility = Boolean.TRUE;
 			}
-			ScoreEvaluation sceval = new ScoreEvaluation(score, pass, assessmentStatus, visibility, completion,
+			ScoreEvaluation sceval = new ScoreEvaluation(score, pass, assessmentStatus, visibility, start, completion,
 					AssessmentRunStatus.done, assessmentId);
 			
 			boolean increment = incrementAttempts.getAndSet(false);
@@ -882,12 +1097,13 @@ public class QTI21AssessmentRunController extends BasicController implements Gen
 				ThreadLocalUserActivityLogger.log(QTI21LoggingAction.QTI_CLOSE_IN_COURSE, getClass());
 			}
 			coordinatorManager.getCoordinator().getEventBus()
-				.fireEventToListenersOf(new CompletionEvent(CompletionEvent.PROGRESS, courseNode.getIdent(), completion, AssessmentRunStatus.done, getIdentity().getKey()),
-					userCourseEnv.getCourseEnvironment().getCourseGroupManager().getCourseResource());
+				.fireEventToListenersOf(new CompletionEvent(CompletionEvent.PROGRESS, courseNode.getIdent(),
+						start, completion, AssessmentRunStatus.done, getIdentity().getKey()),
+						userCourseEnv.getCourseEnvironment().getCourseGroupManager().getCourseResource());
 			
 			if(IQEditController.CORRECTION_GRADING.equals(correctionMode)) {
 				AssessmentEntry assessmentEntry = courseAssessmentService.getAssessmentEntry(courseNode, userCourseEnv);
-				gradingService.assignGrader(testEntry, assessmentEntry, true);
+				gradingService.assignGrader(testEntry, assessmentEntry, new Date(), true);
 			}
 
 			assessmentNotificationsHandler.markPublisherNews(getIdentity(), userCourseEnv.getCourseEnvironment().getCourseResourceableId());
