@@ -20,6 +20,8 @@
 package org.olat.group.ui.edit;
 
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.olat.basesecurity.GroupRoles;
 import org.olat.core.gui.UserRequest;
@@ -41,8 +43,11 @@ import org.olat.core.logging.activity.ThreadLocalUserActivityLogger;
 import org.olat.core.util.mail.MailHelper;
 import org.olat.core.util.mail.MailPackage;
 import org.olat.core.util.mail.MailTemplate;
+import org.olat.course.member.wizard.ImportMemberByUsernamesController;
 import org.olat.course.member.wizard.ImportMember_1a_LoginListStep;
 import org.olat.course.member.wizard.ImportMember_1b_ChooseMemberStep;
+import org.olat.course.member.wizard.MembersByNameContext;
+import org.olat.course.member.wizard.MembersContext;
 import org.olat.group.BusinessGroup;
 import org.olat.group.BusinessGroupManagedFlag;
 import org.olat.group.BusinessGroupService;
@@ -58,12 +63,13 @@ import org.springframework.beans.factory.annotation.Autowired;
  */
 public class BusinessGroupMembersController extends BasicController {
 	
+	private final Link addMemberLink;
+	private final Link importMemberLink;
 	private final VelocityContainer mainVC;
 
 	private final DisplayMemberSwitchForm dmsForm;
 	private final MembershipConfigurationForm configForm;
 	private MemberListController membersController;
-	private final Link importMemberLink, addMemberLink;
 	private StepsMainRunController importMembersWizard;
 	
 	private BusinessGroup businessGroup;
@@ -142,7 +148,7 @@ public class BusinessGroupMembersController extends BasicController {
 		boolean hasWaitingList = businessGroup.getWaitingListEnabled().booleanValue();	
 		Boolean waitingFlag = (Boolean)mainVC.getContext().get("hasWaitingGrp");
 		if(waitingFlag == null || waitingFlag.booleanValue() != hasWaitingList) {
-			mainVC.contextPut("hasWaitingGrp", new Boolean(hasWaitingList));
+			mainVC.contextPut("hasWaitingGrp", Boolean.valueOf(hasWaitingList));
 			dmsForm.setWaitingListVisible(hasWaitingList);
 		}
 		
@@ -200,7 +206,8 @@ public class BusinessGroupMembersController extends BasicController {
 	private void doChooseMembers(UserRequest ureq) {
 		removeAsListenerAndDispose(importMembersWizard);
 
-		Step start = new ImportMember_1b_ChooseMemberStep(ureq, null, businessGroup, null, false);
+		MembersContext membersContext = MembersContext.valueOf(businessGroup);
+		Step start = new ImportMember_1b_ChooseMemberStep(ureq, membersContext);
 		StepRunnerCallback finish = (uureq, wControl, runContext) -> {
 			addMembers(runContext);
 			return StepsMainRunController.DONE_MODIFIED;
@@ -215,16 +222,17 @@ public class BusinessGroupMembersController extends BasicController {
 	private void doImportMembers(UserRequest ureq) {
 		removeAsListenerAndDispose(importMembersWizard);
 
-		Step start = new ImportMember_1a_LoginListStep(ureq, null, businessGroup, null, false);
-		StepRunnerCallback finish = new StepRunnerCallback() {
-			@Override
-			public Step execute(UserRequest uureq, WindowControl wControl, StepsRunContext runContext) {
-				addMembers(runContext);
-				if(runContext.containsKey("notFounds")) {
-					showWarning("user.notfound", runContext.get("notFounds").toString());
-				}
-				return StepsMainRunController.DONE_MODIFIED;
+		MembersContext membersContext = MembersContext.valueOf(businessGroup);
+		Step start = new ImportMember_1a_LoginListStep(ureq, membersContext);
+		StepRunnerCallback finish = (uureq, wControl, runContext) -> {
+			addMembers(runContext);
+			MembersByNameContext membersByNameContext = (MembersByNameContext)runContext.get(ImportMemberByUsernamesController.RUN_CONTEXT_KEY);
+			if(!membersByNameContext.getNotFoundNames().isEmpty()) {
+				String notFoundNames = membersByNameContext.getNotFoundNames().stream()
+						.collect(Collectors.joining(", "));
+				showWarning("user.notfound", notFoundNames);
 			}
+			return StepsMainRunController.DONE_MODIFIED;
 		};
 		
 		importMembersWizard = new StepsMainRunController(ureq, getWindowControl(), start, finish, null,
@@ -234,8 +242,7 @@ public class BusinessGroupMembersController extends BasicController {
 	}
 	
 	private void addMembers(StepsRunContext runContext) {
-		@SuppressWarnings("unchecked")
-		List<Identity> members = (List<Identity>)runContext.get("members");
+		Set<Identity> members = ((MembersByNameContext)runContext.get(ImportMemberByUsernamesController.RUN_CONTEXT_KEY)).getIdentities();
 		
 		MemberPermissionChangeEvent changes = (MemberPermissionChangeEvent)runContext.get("permissions");
 
