@@ -19,19 +19,26 @@
  */
 package org.olat.basesecurity;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
 import java.util.ArrayList;
+import java.util.Calendar;
 import java.util.Collections;
+import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.TimeUnit;
 
 import org.junit.Assert;
 import org.junit.Test;
+import org.olat.core.CoreSpringFactory;
 import org.olat.core.commons.persistence.DB;
+import org.olat.core.commons.persistence.DBFactory;
 import org.olat.core.commons.services.webdav.manager.WebDAVAuthManager;
 import org.olat.core.id.Identity;
 import org.olat.core.id.Organisation;
@@ -40,8 +47,10 @@ import org.olat.core.id.RolesByOrganisation;
 import org.olat.core.id.User;
 import org.olat.core.id.UserConstants;
 import org.olat.core.util.Encoder;
+import org.olat.ldap.ui.LDAPAuthenticationController;
 import org.olat.login.LoginModule;
 import org.olat.test.JunitTestHelper;
+import org.olat.test.JunitTestHelper.IdentityWithLogin;
 import org.olat.test.OlatTestCase;
 import org.olat.user.UserManager;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -66,34 +75,78 @@ public class BaseSecurityManagerTest extends OlatTestCase {
 	
 	
 	@Test
-	public void testCreateIdentity() {
-		String username = "createid-" + UUID.randomUUID().toString();
-		User user = userManager.createUser("first" + username, "last" + username, username + "@frentix.com");
-		Identity identity = securityManager.createAndPersistIdentityAndUser(username, null, user, BaseSecurityModule.getDefaultAuthProviderIdentifier(), username, "secret");
+	public void createIdentity() {
+		String name = "createid-" + UUID.randomUUID().toString();
+		User user = userManager.createUser("first" + name, "last" + name, name + "@frentix.com");
+		Identity identity = securityManager.createAndPersistIdentityAndUser(null, name, null, user,
+				BaseSecurityModule.getDefaultAuthProviderIdentifier(), name, "secret", null);
 		dbInstance.commitAndCloseSession();
 		
 		Assert.assertNotNull(identity);
 		Assert.assertNotNull(identity.getKey());
-		Assert.assertEquals(username, identity.getName());
+		Assert.assertNotNull(identity.getUser());
+		Assert.assertNotNull(identity.getName());
+		Assert.assertEquals(user, identity.getUser());
+		Assert.assertEquals("u" + user.getKey(), identity.getName());
+		Assert.assertEquals("first" + name, identity.getUser().getFirstName());
+		Assert.assertEquals("last" + name, identity.getUser().getLastName());
+		Assert.assertEquals("first" + name, identity.getUser().getProperty(UserConstants.FIRSTNAME, null));
+		Assert.assertEquals("last" + name, identity.getUser().getProperty(UserConstants.LASTNAME, null));
+		Assert.assertEquals(name + "@frentix.com", identity.getUser().getProperty(UserConstants.EMAIL, null));
+	}
+	
+	@Test
+	public void createIdentityWithIdentityName() {
+		String name = "createid-" + UUID.randomUUID().toString();
+		User user = userManager.createUser("first" + name, "last" + name, name + "@openolat.com");
+		Identity identity = securityManager.createAndPersistIdentityAndUser(name, name, null, user,
+				BaseSecurityModule.getDefaultAuthProviderIdentifier(), name, "secret", null);
+		dbInstance.commitAndCloseSession();
+		
+		Assert.assertNotNull(identity);
+		Assert.assertNotNull(identity.getKey());
 		Assert.assertNotNull(identity.getUser());
 		Assert.assertEquals(user, identity.getUser());
-		Assert.assertEquals("first" + username, identity.getUser().getFirstName());
-		Assert.assertEquals("last" + username, identity.getUser().getLastName());
-		Assert.assertEquals("first" + username, identity.getUser().getProperty(UserConstants.FIRSTNAME, null));
-		Assert.assertEquals("last" + username, identity.getUser().getProperty(UserConstants.LASTNAME, null));
-		Assert.assertEquals(username + "@frentix.com", identity.getUser().getProperty(UserConstants.EMAIL, null));
+		Assert.assertEquals(name, identity.getName());
+		Assert.assertEquals("first" + name, identity.getUser().getFirstName());
+		Assert.assertEquals("last" + name, identity.getUser().getLastName());
+		Assert.assertEquals("first" + name, identity.getUser().getProperty(UserConstants.FIRSTNAME, null));
+		Assert.assertEquals("last" + name, identity.getUser().getProperty(UserConstants.LASTNAME, null));
+		Assert.assertEquals(name + "@openolat.com", identity.getUser().getProperty(UserConstants.EMAIL, null));
+	}
+	
+	@Test
+	public void createAndPersistIdentityAndUserWithOrganisationAndName() {
+		String name = "createid-" + UUID.randomUUID().toString();
+		User user = userManager.createUser("first" + name, "last" + name, name + "@openolat.com");
+		Identity identity = securityManager.createAndPersistIdentityAndUserWithOrganisation(name, name, null, user,
+				BaseSecurityModule.getDefaultAuthProviderIdentifier(), name, "secret", null, null);
+		dbInstance.commitAndCloseSession();
+		
+		Assert.assertNotNull(identity);
+		Assert.assertNotNull(identity.getKey());
+		Assert.assertNotNull(identity.getUser());
+		Assert.assertEquals(user, identity.getUser());
+		Assert.assertEquals(name, identity.getName());
+		
+		List<Organisation> organisations = organisationService.getOrganisations(identity, OrganisationRoles.user);
+		Assert.assertEquals(1, organisations.size());
+		Organisation defaultOrganisation = organisationService.getDefaultOrganisation();
+		Assert.assertEquals(defaultOrganisation, organisations.get(0));
 	}
 	
 	/**
 	 * This test is primarily made against Oracle
 	 */
 	@Test
-	public void testCreateUpdateIdentity() {
-		String username = "update-id-" + UUID.randomUUID().toString();
-		User user = userManager.createUser("first" + username, "last" + username, username + "@frentix.com");
+	public void createUpdateIdentity() {
+		String authusername = "update-id-" + UUID.randomUUID().toString();
+		String nickName = "nn" + authusername;
+		User user = userManager.createUser("first" + authusername, "last" + authusername, authusername + "@frentix.com");
 		user.setProperty(UserConstants.COUNTRY, "");
 		user.setProperty(UserConstants.CITY, "Basel");
-		Identity identity = securityManager.createAndPersistIdentityAndUser(username, null, user, BaseSecurityModule.getDefaultAuthProviderIdentifier(), username, "secret");
+		Identity identity = securityManager.createAndPersistIdentityAndUser(null, nickName, null, user,
+				BaseSecurityModule.getDefaultAuthProviderIdentifier(), authusername, "secret", null);
 		dbInstance.commitAndCloseSession();
 		
 		//reload and update
@@ -101,6 +154,7 @@ public class BaseSecurityManagerTest extends OlatTestCase {
 		identityPrime.getUser().setProperty(UserConstants.FIRSTNAME, "firstname");
 		identityPrime.getUser().setProperty(UserConstants.COUNTRY, "CH");
 		identityPrime.getUser().setProperty(UserConstants.CITY, "Lausanne");
+		identityPrime.getUser().setProperty(UserConstants.NICKNAME, nickName);
 		userManager.updateUserFromIdentity(identityPrime);
 		dbInstance.commitAndCloseSession();
 		
@@ -108,8 +162,8 @@ public class BaseSecurityManagerTest extends OlatTestCase {
 		Identity identitySecond = securityManager.loadIdentityByKey(identity.getKey());
 		dbInstance.commitAndCloseSession();//check the fetch join on user
 		Assert.assertEquals("firstname", identitySecond.getUser().getProperty(UserConstants.FIRSTNAME, null));
-		Assert.assertEquals("last" + username, identitySecond.getUser().getProperty(UserConstants.LASTNAME, null));
-		Assert.assertEquals(username + "@frentix.com", identitySecond.getUser().getProperty(UserConstants.EMAIL, null));
+		Assert.assertEquals("last" + authusername, identitySecond.getUser().getProperty(UserConstants.LASTNAME, null));
+		Assert.assertEquals(authusername + "@frentix.com", identitySecond.getUser().getProperty(UserConstants.EMAIL, null));
 		Assert.assertEquals("CH", identitySecond.getUser().getProperty(UserConstants.COUNTRY, null));
 		Assert.assertEquals("Lausanne", identitySecond.getUser().getProperty(UserConstants.CITY, null));
 	}
@@ -117,35 +171,32 @@ public class BaseSecurityManagerTest extends OlatTestCase {
 	
 	@Test
 	public void testEquals() {
-		String identityTest1Name = "eq-1-" + UUID.randomUUID().toString();
-		Identity ident1 = JunitTestHelper.createAndPersistIdentityAsUser(identityTest1Name);
-		Identity ident2 = JunitTestHelper.createAndPersistIdentityAsUser("eq-2-" + UUID.randomUUID().toString());
+		Identity ident1 = JunitTestHelper.createAndPersistIdentityAsRndUser("eq-1-");
+		Identity ident2 = JunitTestHelper.createAndPersistIdentityAsRndUser("eq-2-");
 		
-		assertFalse("Wrong equals implementation, different types are recognized as equals ",ident1.equals(new Integer(1)));
+		assertFalse("Wrong equals implementation, different types are recognized as equals ",ident1.equals(Integer.valueOf(1)));
 		assertFalse("Wrong equals implementation, different users are recognized as equals ",ident1.equals(ident2));
 		assertFalse("Wrong equals implementation, null value is recognized as equals ",ident1.equals(null));
 		assertTrue("Wrong equals implementation, same users are NOT recognized as equals ",ident1.equals(ident1));
-		Identity ident1_2 = securityManager.findIdentityByName(identityTest1Name);
+		Identity ident1_2 = securityManager.loadIdentityByKey(ident1.getKey());
 		assertTrue("Wrong equals implementation, same users are NOT recognized as equals ",ident1.equals(ident1_2));
 	}
 	
 	@Test
 	public void testHashCode() {
-		String identityTest1Name = "hash-1-" + UUID.randomUUID().toString();
-		Identity ident1 = JunitTestHelper.createAndPersistIdentityAsUser(identityTest1Name);
-		Identity ident2 = JunitTestHelper.createAndPersistIdentityAsUser("hash-2-" + UUID.randomUUID().toString());
+		Identity ident1 = JunitTestHelper.createAndPersistIdentityAsRndUser("hash-1");
+		Identity ident2 = JunitTestHelper.createAndPersistIdentityAsRndUser("hash-2");
 		
 		assertTrue("Wrong hashCode implementation, same users have NOT same hash-code ",ident1.hashCode() == ident1.hashCode());
 		assertFalse("Wrong hashCode implementation, different users have same hash-code",ident1.hashCode() == ident2.hashCode());
-		Identity ident1_2 = securityManager.findIdentityByName(identityTest1Name);
+		Identity ident1_2 = securityManager.loadIdentityByKey(ident1.getKey());
 		assertTrue("Wrong hashCode implementation, same users have NOT same hash-code ",ident1.hashCode() == ident1_2.hashCode());
 	}
 
 	@Test
 	public void testFindIdentityByUser() {
 		//create a user it
-		String username = "find-me-" + UUID.randomUUID().toString();
-		Identity id = JunitTestHelper.createAndPersistIdentityAsUser(username);
+		Identity id = JunitTestHelper.createAndPersistIdentityAsRndUser("by-user");
 		Assert.assertNotNull(id);
 		Assert.assertNotNull(id.getUser());
 		dbInstance.commitAndCloseSession();
@@ -153,7 +204,6 @@ public class BaseSecurityManagerTest extends OlatTestCase {
 		//find it
 		Identity foundId = securityManager.findIdentityByUser(id.getUser());
 		Assert.assertNotNull(foundId);
-		Assert.assertEquals(username, foundId.getName());
 		Assert.assertEquals(id, foundId);
 		Assert.assertEquals(id.getUser(), foundId.getUser());
 	}
@@ -161,124 +211,54 @@ public class BaseSecurityManagerTest extends OlatTestCase {
 	@Test
 	public void testFindIdentityByName() {
 		//create a user it
-		String username = "find-me-" + UUID.randomUUID().toString();
-		Identity id = JunitTestHelper.createAndPersistIdentityAsUser(username);
+		Identity id = JunitTestHelper.createAndPersistIdentityAsRndUser("find-name-3");
 		Assert.assertNotNull(id);
-		Assert.assertEquals(username, id.getName());
 		dbInstance.commitAndCloseSession();
 		
 		//find it
-		Identity foundId = securityManager.findIdentityByName(username);
+		Identity foundId = securityManager.findIdentityByName(id.getName());
 		Assert.assertNotNull(foundId);
-		Assert.assertEquals(username, foundId.getName());
 		Assert.assertEquals(id, foundId);
 	}
 	
 	@Test
 	public void findIdentityByNameCaseInsensitive() {
 		//create a user it
-		String username = "find-ME-2-" + UUID.randomUUID().toString();
-		Identity id = JunitTestHelper.createAndPersistIdentityAsUser(username);
-		Assert.assertNotNull(id);
-		Assert.assertEquals(username, id.getName());
+		IdentityWithLogin idWithLogin = JunitTestHelper.createAndPersistRndUser("find-ME-2");
+		Identity id = idWithLogin.getIdentity();
+		String name = id.getName();
 		dbInstance.commitAndCloseSession();
 		
 		//find it
-		Identity foundId = securityManager.findIdentityByNameCaseInsensitive(username);
+		Identity foundId = securityManager.findIdentityByNameCaseInsensitive(name);
 		Assert.assertNotNull(foundId);
-		Assert.assertEquals(username, foundId.getName());
+		Assert.assertEquals(name, foundId.getName());
 		Assert.assertEquals(id, foundId);
 		
 		//find it lower case
-		Identity foundLoweredId = securityManager.findIdentityByNameCaseInsensitive(username.toLowerCase());
+		Identity foundLoweredId = securityManager.findIdentityByNameCaseInsensitive(name.toLowerCase());
 		Assert.assertNotNull(foundLoweredId);
-		Assert.assertEquals(username, foundLoweredId.getName());
+		Assert.assertEquals(name, foundLoweredId.getName());
 		Assert.assertEquals(id, foundLoweredId);
 		
 		//find it upper case
-		Identity foundUpperedId = securityManager.findIdentityByNameCaseInsensitive(username.toUpperCase());
+		Identity foundUpperedId = securityManager.findIdentityByNameCaseInsensitive(name.toUpperCase());
 		Assert.assertNotNull(foundUpperedId);
-		Assert.assertEquals(username, foundUpperedId.getName());
+		Assert.assertEquals(name, foundUpperedId.getName());
 		Assert.assertEquals(id, foundUpperedId);
-	}
-	
-	@Test
-	public void testFindIdentityByNames() {
-		//create a user it
-		String name1 = "find-me-1-" + UUID.randomUUID().toString();
-		Identity id1 = JunitTestHelper.createAndPersistIdentityAsUser(name1);
-		String name2 = "find-me-2-" + UUID.randomUUID().toString();
-		Identity id2 = JunitTestHelper.createAndPersistIdentityAsUser(name2);
-		dbInstance.commitAndCloseSession();
-		
-		//find it
-		List<String> names = new ArrayList<>(2);
-		names.add(name1);
-		names.add(name2);
-		List<Identity> foundIds = securityManager.findIdentitiesByName(names);
-		Assert.assertNotNull(foundIds);
-		Assert.assertEquals(2, foundIds.size());
-		Assert.assertTrue(foundIds.contains(id1));
-		Assert.assertTrue(foundIds.contains(id2));
-	}
-	
-	@Test
-	public void findIdentityByNamesCaseInsensitive() {
-		//create a user it
-		String username1 = "fINd-ME-4-" + UUID.randomUUID();
-		Identity id1 = JunitTestHelper.createAndPersistIdentityAsUser(username1);
-		String username2 = "fINd-ME-5-" + UUID.randomUUID();
-		Identity id2 = JunitTestHelper.createAndPersistIdentityAsUser(username2);
-		Assert.assertNotNull(id1);
-		Assert.assertEquals(username1, id1.getName());
-		Assert.assertNotNull(id2);
-		Assert.assertEquals(username2, id2.getName());
-		dbInstance.commitAndCloseSession();
-		
-		List<String> names = new ArrayList<>(2);
-		names.add(username1);
-		names.add(username2);
-		
-		//find it
-		List<Identity> foundIds = securityManager.findIdentitiesByNameCaseInsensitive(names);
-		Assert.assertNotNull(foundIds);
-		Assert.assertEquals(2, foundIds.size());
-		Assert.assertTrue(foundIds.contains(id1));
-		Assert.assertTrue(foundIds.contains(id2));
-	}
-	
-	@Test
-	public void findIdentitiesByNumber() {
-		//create a user it
-		String username = "fINd-ME-6-" + UUID.randomUUID();
-		String institutionalNumber = UUID.randomUUID().toString();
-		Identity id = JunitTestHelper.createAndPersistIdentityAsUser(username);
-		id.getUser().setProperty(UserConstants.INSTITUTIONALUSERIDENTIFIER, institutionalNumber);
-		userManager.updateUserFromIdentity(id);
-		dbInstance.commitAndCloseSession();
-		
-		List<String> numbers = new ArrayList<>(2);
-		numbers.add(institutionalNumber);
-
-		//find it
-		List<Identity> foundIds = securityManager.findIdentitiesByNumber(numbers);
-		Assert.assertNotNull(foundIds);
-		Assert.assertEquals(1, foundIds.size());
-		Assert.assertTrue(foundIds.contains(id));
 	}
 	
 	@Test
 	public void loadIdentityShortByKey() {
 		//create a user it
-		String idName = "find-me-short-1-" + UUID.randomUUID();
-		Identity id = JunitTestHelper.createAndPersistIdentityAsUser(idName);
+		Identity id = JunitTestHelper.createAndPersistIdentityAsRndUser("find-me-short-1-");
 		dbInstance.commitAndCloseSession();
 		
 		//find it
 		IdentityShort foundId = securityManager.loadIdentityShortByKey(id.getKey());
 		Assert.assertNotNull(foundId);
 		Assert.assertEquals(id.getKey(), foundId.getKey());
-		Assert.assertEquals(idName, foundId.getName());
+		Assert.assertEquals(id.getName(), foundId.getName());
 		Assert.assertEquals(id.getUser().getEmail(), foundId.getEmail());
 		Assert.assertEquals(id.getUser().getFirstName(), foundId.getFirstName());
 		Assert.assertEquals(id.getUser().getLastName(), foundId.getLastName());
@@ -286,12 +266,45 @@ public class BaseSecurityManagerTest extends OlatTestCase {
 		Assert.assertEquals(id.getUser().getKey(), foundId.getUserKey());
 		Assert.assertTrue(foundId.getStatus() < Identity.STATUS_VISIBLE_LIMIT);
 	}
+	
+	@Test
+	public void loadIdentityShortByKeys() {
+		//create a user it
+		Identity id = JunitTestHelper.createAndPersistIdentityAsRndUser("find-me-short-2-");
+		dbInstance.commitAndCloseSession();
+		
+		//find it
+		List<IdentityShort> foundIdList = securityManager.loadIdentityShortByKeys(List.of(id.getKey()));
+		Assert.assertNotNull(foundIdList);
+		Assert.assertEquals(1, foundIdList.size());
+		Assert.assertEquals(id.getKey(), foundIdList.get(0).getKey());
+	}
+	
+	@Test
+	public void loadIdentityShortByKeysLarge() {
+		//create a user it
+		Identity id = JunitTestHelper.createAndPersistIdentityAsRndUser("find-me-short-3-");
+		dbInstance.commitAndCloseSession();
+		
+		List<Long> lofOfkeys = new ArrayList<>(64004);
+		for(int i=1; i<64000; i++) {
+			lofOfkeys.add(Long.valueOf(i));
+		}
+		lofOfkeys.add(id.getKey());
+
+		//find it
+		List<IdentityShort> foundIdList = securityManager.loadIdentityShortByKeys(List.of(id.getKey()));
+		Assert.assertNotNull(foundIdList);
+		assertThat(foundIdList)
+			.extracting(idShort -> idShort.getKey())
+			.contains(id.getKey());
+	}
 
 	@Test
-	public void testLoadIdentityByKeys() {
+	public void loadIdentityByKeys() {
 		//create a security group with 2 identities
-		Identity id1 = JunitTestHelper.createAndPersistIdentityAsRndUser( "load-1-sec-");
-		Identity id2 = JunitTestHelper.createAndPersistIdentityAsRndUser( "load-2-sec-");
+		Identity id1 = JunitTestHelper.createAndPersistIdentityAsRndUser("load-1-sec-");
+		Identity id2 = JunitTestHelper.createAndPersistIdentityAsRndUser("load-2-sec-");
 		dbInstance.commitAndCloseSession();
 		
 		List<Long> keys = new ArrayList<>(2);
@@ -302,6 +315,108 @@ public class BaseSecurityManagerTest extends OlatTestCase {
 		Assert.assertEquals(2, identities.size());
 		Assert.assertTrue(identities.contains(id1));
 		Assert.assertTrue(identities.contains(id2));
+	}
+	
+	@Test
+	public void loadIdentityByKeysLarge() {
+		//create a security group with 2 identities
+		Identity id = JunitTestHelper.createAndPersistIdentityAsRndUser("load-8-sec-");
+		dbInstance.commitAndCloseSession();
+		
+		List<Long> lofOfkeys = new ArrayList<>(64004);
+		for(int i=1; i<64000; i++) {
+			lofOfkeys.add(Long.valueOf(i + 128000));
+		}
+		lofOfkeys.add(id.getKey());
+		
+		List<Identity> identities = securityManager.loadIdentityByKeys(lofOfkeys);
+		Assert.assertNotNull(identities);
+		Assert.assertTrue(identities.contains(id));
+	}
+	
+	@Test
+	public void loadIdentityByKey() {
+		//create a security group with 2 identities
+		Identity id1 = JunitTestHelper.createAndPersistIdentityAsRndUser("load-1-sec-");
+		dbInstance.commitAndCloseSession();
+
+		Identity identity = securityManager.loadIdentityByKey(id1.getKey());
+		Assert.assertNotNull(identity);
+		Assert.assertEquals(id1, identity);
+	}
+	
+	@Test
+	public void searchIdentityShort() {
+		//create a security group with 2 identities
+		IdentityWithLogin id = JunitTestHelper.createAndPersistRndUser("short-1-search-");
+		dbInstance.commitAndCloseSession();
+
+		String login = id.getLogin().substring(0, 12);
+		List<IdentityShort> identities = securityManager.searchIdentityShort(login, 32000);
+		assertThat(identities)
+			.isNotNull()
+			.extracting(identity -> identity.getKey())
+			.contains(id.getKey());
+	}
+	
+	@Test
+	public void searchIdentityShort_multiWords() {
+		//create a security group with 2 identities
+		IdentityWithLogin id = JunitTestHelper.createAndPersistRndUser("short-2-search-");
+		dbInstance.commitAndCloseSession();
+
+		String login = id.getLogin().substring(0, 12);
+		List<IdentityShort> identities = securityManager.searchIdentityShort(login + " hello world", 32000);
+		assertThat(identities)
+			.isNotNull()
+			.extracting(identity -> identity.getKey())
+			.contains(id.getKey());
+	}
+	
+	/**
+	 * The test checks only if the query is valid.
+	 * 
+	 */
+	@Test
+	public void searchIdentityShortLongAllParameters() {
+		IdentityWithLogin id = JunitTestHelper.createAndPersistRndUser("short-2-search-");
+		dbInstance.commitAndCloseSession();
+
+		List<Organisation> organisations = organisationService.getOrganisations();
+
+		String login = id.getLogin().substring(0, 12);
+		List<IdentityShort> identities = securityManager.searchIdentityShort(login + " hello world",
+				organisations, GroupRoles.participant,  32000);
+		assertThat(identities)
+			.isNotNull();
+	}
+	
+	@Test
+	public void searchIdentityShortParameters() {
+		IdentityWithLogin id = JunitTestHelper.createAndPersistRndUser("short-2-search-");
+		dbInstance.commitAndCloseSession();
+
+		Organisation defOrganisation = organisationService.getDefaultOrganisation();
+
+		String login = id.getLogin().substring(0, 12);
+		List<IdentityShort> identities = securityManager.searchIdentityShort(login + " and    () <!>",
+				Collections.singletonList(defOrganisation), null,  32000);
+		assertThat(identities)
+			.isNotNull()
+			.extracting(identity -> identity.getKey())
+			.contains(id.getKey());
+	}
+	
+	@Test
+	public void searchIdentityShortLongEmpty() {
+		List<IdentityShort> identities = securityManager.searchIdentityShort(null, null, null,  32000);
+		Assert.assertTrue(identities.isEmpty());
+
+		identities = securityManager.searchIdentityShort("", null, null,  32000);
+		Assert.assertTrue(identities.isEmpty());
+		
+		identities = securityManager.searchIdentityShort(" ", null, null,  32000);
+		Assert.assertTrue(identities.isEmpty());
 	}
 	
 	/**
@@ -543,19 +658,19 @@ public class BaseSecurityManagerTest extends OlatTestCase {
 	
 	@Test
 	public void testGetIdentitiesByPowerSearchWithGroups() {
-		Identity id = JunitTestHelper.createAndPersistIdentityAsUser("user-1-" + UUID.randomUUID().toString());
+		IdentityWithLogin id = JunitTestHelper.createAndPersistRndUser("user-1");
 		dbInstance.commitAndCloseSession();
 		
 		//test positive result
 		OrganisationRoles[] groups = { OrganisationRoles.user };
-		List<Identity> userList = securityManager.getVisibleIdentitiesByPowerSearch(id.getName(), null, true, groups, null, null, null);
+		List<Identity> userList = securityManager.getVisibleIdentitiesByPowerSearch(id.getLogin(), null, true, groups, null, null, null);
 		Assert.assertNotNull(userList);
 		Assert.assertEquals(1, userList.size());
-		Assert.assertEquals(id, userList.get(0));
+		Assert.assertEquals(id.getIdentity(), userList.get(0));
 	  
 		//test negatif -> with author security group
 		OrganisationRoles[] authors = { OrganisationRoles.author };
-		List<Identity> authorList = securityManager.getVisibleIdentitiesByPowerSearch(id.getName(), null, true, authors, null, null, null);
+		List<Identity> authorList = securityManager.getVisibleIdentitiesByPowerSearch(id.getLogin(), null, true, authors, null, null, null);
 		Assert.assertNotNull(authorList);
 		Assert.assertTrue(authorList.isEmpty());
 	}
@@ -636,7 +751,8 @@ public class BaseSecurityManagerTest extends OlatTestCase {
 	
 	@Test
 	public void deleteInvalidAuthenticationsByEmail() {
-		Identity identity = JunitTestHelper.createAndPersistIdentityAsUser("auth-del-email-" + UUID.randomUUID().toString());
+		IdentityWithLogin identityWithLogin = JunitTestHelper.createAndPersistRndUser("auth-del-email-");
+		Identity identity = identityWithLogin.getIdentity();
 		User user = identity.getUser();
 		String email = user.getEmail();
 		securityManager.createAndPersistAuthentication(identity, "OLAT", email, "secret", Encoder.Algorithm.sha512);
@@ -656,7 +772,7 @@ public class BaseSecurityManagerTest extends OlatTestCase {
 		Assert.assertNotNull(securityManager.findAuthenticationByAuthusername(email, WebDAVAuthManager.PROVIDER_WEBDAV_EMAIL));
 		Assert.assertNotNull(securityManager.findAuthenticationByAuthusername(email, WebDAVAuthManager.PROVIDER_WEBDAV_INSTITUTIONAL_EMAIL));
 		Assert.assertNull(securityManager.findAuthenticationByAuthusername(email, "OLAT"));
-		Assert.assertNotNull(securityManager.findAuthenticationByAuthusername(identity.getName(), "OLAT"));
+		Assert.assertNotNull(securityManager.findAuthenticationByAuthusername(identityWithLogin.getLogin(), "OLAT"));
 		Assert.assertNotNull(securityManager.findAuthenticationByAuthusername(email, "del-mail"));
 		
 		// Email of the user changed: The authentications are not valid any longer.
@@ -673,8 +789,259 @@ public class BaseSecurityManagerTest extends OlatTestCase {
 		Assert.assertNull(securityManager.findAuthenticationByAuthusername(email, WebDAVAuthManager.PROVIDER_WEBDAV_EMAIL));
 		Assert.assertNull(securityManager.findAuthenticationByAuthusername(email, WebDAVAuthManager.PROVIDER_WEBDAV_INSTITUTIONAL_EMAIL));
 		Assert.assertNull(securityManager.findAuthenticationByAuthusername(email, "OLAT"));
-		Assert.assertNotNull(securityManager.findAuthenticationByAuthusername(identity.getName(), "OLAT"));
+		Assert.assertNotNull(securityManager.findAuthenticationByAuthusername(identityWithLogin.getLogin(), "OLAT"));
 		Assert.assertNotNull(securityManager.findAuthenticationByAuthusername(email, "del-mail"));
+	}
+	
+	@Test
+	public void getAuthentications() {
+		IdentityWithLogin test = JunitTestHelper.createAndPersistRndUser("auth-0");
+		dbInstance.commitAndCloseSession();
+		
+		List<Authentication> authentications = securityManager.getAuthentications(test.getIdentity());
+		Authentication authentication = authentications.get(0);
+		Assert.assertEquals(test.getLogin(), authentication.getAuthusername());
+	}
+	
+	@Test
+	public void findAuthenticationNameOLAT() {
+		IdentityWithLogin id = JunitTestHelper.createAndPersistRndUser("auth-0");
+		String testLogin = id.getLogin();
+		
+		String name = securityManager.findAuthenticationName(id.getIdentity());
+		Assert.assertEquals(testLogin,name);
+	}
+	
+	@Test
+	public void findAuthenticationNameLDAP() {
+		IdentityWithLogin id = JunitTestHelper.createAndPersistRndUser("auth-0");
+		String ldapAuthusername = UUID.randomUUID().toString();
+		securityManager.createAndPersistAuthentication(id.getIdentity(), LDAPAuthenticationController.PROVIDER_LDAP, ldapAuthusername, null, null);
+		securityManager.createAndPersistAuthentication(id.getIdentity(), WebDAVAuthManager.PROVIDER_HA1, UUID.randomUUID().toString(), "secret", Encoder.Algorithm.sha512);
+		dbInstance.commitAndCloseSession();
+		
+		String name = securityManager.findAuthenticationName(id.getIdentity());
+		Assert.assertEquals(ldapAuthusername, name);
+	}
+
+	@Test
+	public void findAuthenticationByAuthusername() {
+		IdentityWithLogin id = JunitTestHelper.createAndPersistRndUser("auth-0");
+		String testLogin = id.getLogin();
+		
+		
+		Authentication authentication = securityManager.findAuthenticationByAuthusername(testLogin, BaseSecurityModule.getDefaultAuthProviderIdentifier());
+		Assert.assertEquals(testLogin, authentication.getAuthusername());
+	}
+	
+	@Test
+	public void findAuthenticationByAuthusername_attack() {
+		String testLoginHacked = "*est-logi*";
+		Authentication authentication1 = securityManager.findAuthenticationByAuthusername(testLoginHacked, BaseSecurityModule.getDefaultAuthProviderIdentifier());
+		Assert.assertNull(authentication1);
+		
+		String testLoginHacked2 = "$est-login";
+		Authentication authentication2 = securityManager.findAuthenticationByAuthusername(testLoginHacked2, BaseSecurityModule.getDefaultAuthProviderIdentifier());
+		Assert.assertNull(authentication2);	
+	}
+
+	@Test
+	public void updateLastLogin() {
+		Identity id = JunitTestHelper.createAndPersistIdentityAsRndUser("last-login-0");
+		dbInstance.commitAndCloseSession();
+		
+		securityManager.setIdentityLastLogin(id);
+		dbInstance.commitAndCloseSession();
+
+		id = securityManager.loadIdentityByKey(id.getKey());
+		Date lastLogin = id.getLastLogin();
+		Assert.assertNotNull(lastLogin);
+	}
+
+	@Test
+	public void updateLastLoginAndInactivationDate() {
+		Identity id = JunitTestHelper.createAndPersistIdentityAsRndUser("last-login-0");
+		((IdentityImpl)id).setInactivationEmailDate(new Date());
+		id = dbInstance.getCurrentEntityManager().merge(id);
+		dbInstance.commitAndCloseSession();
+
+		id = securityManager.loadIdentityByKey(id.getKey());
+		Date mergedInactivationDate = ((IdentityImpl)id).getInactivationEmailDate();
+		Assert.assertNotNull(mergedInactivationDate);
+		dbInstance.commitAndCloseSession();
+		
+		securityManager.setIdentityLastLogin(id);
+		dbInstance.commitAndCloseSession();
+
+		id = securityManager.loadIdentityByKey(id.getKey());
+		Date lastLogin = id.getLastLogin();
+		Assert.assertNotNull(lastLogin);
+		Date inactivationDate = ((IdentityImpl)id).getInactivationEmailDate();
+		Assert.assertNull(inactivationDate);
+	}
+
+	@Test
+	public void reactivatedIdentity() {
+		Identity id = JunitTestHelper.createAndPersistIdentityAsRndUser("allowed-login-0");
+		((IdentityImpl)id).setStatus(Identity.STATUS_INACTIVE);
+		((IdentityImpl)id).setInactivationDate(new Date());
+		((IdentityImpl)id).setInactivationEmailDate(new Date());
+		((IdentityImpl)id).setReactivationDate(new Date());
+		id = dbInstance.getCurrentEntityManager().merge(id);
+		dbInstance.commitAndCloseSession();
+		
+		Identity reactivatedIdentity = securityManager.reactivatedIdentity(id);
+		Assert.assertNull(reactivatedIdentity.getInactivationDate());
+		Assert.assertNull(reactivatedIdentity.getReactivationDate());
+		Assert.assertNull(((IdentityImpl)reactivatedIdentity).getInactivationEmailDate());
+		dbInstance.commitAndCloseSession();
+		
+		Identity reloadedIdentity = securityManager.loadIdentityByKey(id.getKey());
+		Assert.assertNull(reloadedIdentity.getInactivationDate());
+		Assert.assertNull(reloadedIdentity.getReactivationDate());
+		Assert.assertNull(((IdentityImpl)reloadedIdentity).getInactivationEmailDate());
+	}
+	
+	/**
+	 * Little stress test for two locked queries
+	 */
+	@Test
+	public void reactivatedIdentityAndSetLastLogin() {
+		Identity id = JunitTestHelper.createAndPersistIdentityAsRndUser("allowed-login-0");
+		((IdentityImpl)id).setStatus(Identity.STATUS_INACTIVE);
+		((IdentityImpl)id).setInactivationDate(new Date());
+		((IdentityImpl)id).setInactivationEmailDate(new Date());
+		((IdentityImpl)id).setReactivationDate(new Date());
+		id = dbInstance.getCurrentEntityManager().merge(id);
+		dbInstance.commitAndCloseSession();
+		
+		for(int i=0; i<5; i++) {
+			securityManager.setIdentityLastLogin(id);
+			securityManager.reactivatedIdentity(id);
+		}
+		
+		Identity reloadedIdentity = securityManager.loadIdentityByKey(id.getKey());
+		Assert.assertNull(reloadedIdentity.getInactivationDate());
+		Assert.assertNull(reloadedIdentity.getReactivationDate());
+		Assert.assertNull(((IdentityImpl)reloadedIdentity).getInactivationEmailDate());
+	}
+	
+	@Test
+	public void isIdentityLoginAllowed() {
+		Identity id = JunitTestHelper.createAndPersistIdentityAsRndUser("allowed-login-0");
+		((IdentityImpl)id).setStatus(Identity.STATUS_ACTIV);
+		id = dbInstance.getCurrentEntityManager().merge(id);
+		dbInstance.commitAndCloseSession();
+		
+		Assert.assertTrue(securityManager.isIdentityLoginAllowed(id, "OLAT"));
+		Assert.assertTrue(securityManager.isIdentityLoginAllowed(id, null));
+		Assert.assertTrue(securityManager.isIdentityLoginAllowed(id, "Shib"));
+	}
+	
+	@Test
+	public void isIdentityLoginAllowedInactive() {
+		Identity id = JunitTestHelper.createAndPersistIdentityAsRndUser("allowed-login-1");
+		((IdentityImpl)id).setStatus(Identity.STATUS_INACTIVE);
+		id = dbInstance.getCurrentEntityManager().merge(id);
+		dbInstance.commitAndCloseSession();
+		
+		Assert.assertFalse(securityManager.isIdentityLoginAllowed(id, "OLAT"));
+		Assert.assertFalse(securityManager.isIdentityLoginAllowed(id, null));
+		Assert.assertTrue(securityManager.isIdentityLoginAllowed(id, "Shib"));
+	}
+	
+	@Test
+	public void isIdentityLoginAllowedLoginDenied() {
+		Identity id = JunitTestHelper.createAndPersistIdentityAsRndUser("allowed-login-2");
+		((IdentityImpl)id).setStatus(Identity.STATUS_LOGIN_DENIED);
+		id = dbInstance.getCurrentEntityManager().merge(id);
+		dbInstance.commitAndCloseSession();
+		
+		Assert.assertFalse(securityManager.isIdentityLoginAllowed(id, "OLAT"));
+		Assert.assertFalse(securityManager.isIdentityLoginAllowed(id, null));
+		Assert.assertFalse(securityManager.isIdentityLoginAllowed(id, "Shib"));
+	}
+	
+	
+	@Test
+	public void countUniqueUserLoginsSince() {
+		Calendar cal = Calendar.getInstance();
+		cal.add(Calendar.DAY_OF_YEAR, -100);
+		Long initialUserLogins = securityManager.countUniqueUserLoginsSince(cal.getTime());
+		Assert.assertNotNull(initialUserLogins);
+		Assert.assertTrue(initialUserLogins.longValue() >= 0);
+	}
+
+
+	@Test
+	public void setIdentityAsActiv() throws InterruptedException {
+		Identity ident = JunitTestHelper.createAndPersistIdentityAsUser("anIdentity");
+		
+		final int maxLoop = 2000; // => 2000 x 11ms => 22sec => finished in 120sec
+
+		CountDownLatch latch = new CountDownLatch(4);
+		ActivThread[] threads = new ActivThread[4];
+		for(int i=0; i<threads.length;i++) {
+			threads[i] = new ActivThread(ident, maxLoop, latch);
+		}
+
+		for(int i=0; i<threads.length;i++) {
+			threads[i].start();
+		}
+
+		latch.await(120, TimeUnit.SECONDS);
+
+		List<Exception> exceptionsHolder = new ArrayList<>();
+		for(int i=0; i<threads.length;i++) {
+			exceptionsHolder.addAll(threads[i].exceptionHolder);
+		}
+		
+		// if not -> they are in deadlock and the db did not detect it
+		for (Exception exception : exceptionsHolder) {
+			System.err.println("exception: "+exception.getMessage());
+			exception.printStackTrace();
+		}
+		assertTrue("Exceptions #" + exceptionsHolder.size(), exceptionsHolder.isEmpty());				
+	}
+	
+	private static class ActivThread extends Thread {
+		
+		private final int maxLoop;
+		private final Identity identity;
+		private final CountDownLatch countDown;
+		private final List<Exception> exceptionHolder = new ArrayList<>();
+		private final BaseSecurity securityManager;
+		
+		public ActivThread(Identity identity, int maxLoop, CountDownLatch countDown) {
+			this.identity = identity;
+			this.maxLoop = maxLoop;
+			this.countDown = countDown;
+			securityManager = CoreSpringFactory.getImpl(BaseSecurity.class);
+		}
+		
+		@Override
+		public void run() {
+			try {
+				sleep(10);
+				for (int i=0; i<maxLoop; i++) {
+					try {
+						securityManager.setIdentityLastLogin(identity);
+					} catch (Exception e) {
+						exceptionHolder.add(e);
+					} finally {
+						try {
+							DBFactory.getInstance().closeSession();
+						} catch (Exception e) {
+							// ignore
+						}
+					}
+				}
+			} catch (Exception e) {
+				exceptionHolder.add(e);
+			} finally {
+				countDown.countDown();
+			}
+		}
 	}
 	
 }
