@@ -46,21 +46,18 @@ public class MembersWizardPage {
 	
 	public MembersWizardPage nextUsers() {
 		OOGraphene.nextStep(browser);
-		OOGraphene.closeBlueMessageWindow(browser);
-		OOGraphene.waitElement(By.cssSelector("fieldset.o_sel_user_import_overview"), 5, browser);
+		OOGraphene.waitElement(By.cssSelector("fieldset.o_sel_user_import_overview"), browser);
 		return this;
 	}
 	
 	public MembersWizardPage nextOverview() {
 		OOGraphene.nextStep(browser);
-		OOGraphene.closeBlueMessageWindow(browser);
 		OOGraphene.waitElement(By.cssSelector("div.o_sel_edit_permissions"), browser);
 		return this;
 	}
 	
 	public MembersWizardPage nextPermissions() {
 		OOGraphene.nextStep(browser);
-		OOGraphene.closeBlueMessageWindow(browser);
 		OOGraphene.waitElement(By.cssSelector("fieldset.o_sel_contact_form"), browser);
 		return this;
 	}
@@ -78,22 +75,15 @@ public class MembersWizardPage {
 	}
 	
 	/**
-	 * Search member and select them
-	 * @param user
-	 * @return
+	 * Search member and select them, flow to select several
+	 * identities at once.
+	 * 
+	 * @param user The user to search for
+	 * @param admin If administrator search with user name
+	 * @return Itself
 	 */
 	public MembersWizardPage searchMember(UserVO user, boolean admin) {
-		//Search by username
-		By usernameBy = By.cssSelector(".o_sel_usersearch_searchform input[type='text']");
-		OOGraphene.waitElement(usernameBy, browser);
-		
-		List<WebElement> searchFields = browser.findElements(usernameBy);
-		Assert.assertFalse(searchFields.isEmpty());
-		String search = admin ? user.getLogin() : user.getFirstName();
-		searchFields.get(0).sendKeys(search);
-
-		By searchBy = By.cssSelector(".o_sel_usersearch_searchform a.btn-default");
-		OOGraphene.clickAndWait(searchBy, browser);
+		searchMemberForm(user, admin);
 
 		// select all
 		By selectAll = By.xpath("//div[contains(@class,'modal')]//div[contains(@class,'o_table_checkall')]/a[i[contains(@class,'o_icon_check_on')]]");
@@ -105,6 +95,48 @@ public class MembersWizardPage {
 		OOGraphene.waitBusy(browser);
 		return this;
 	}
+	
+	/**
+	 * Search and select a member, flow to select a single identity.
+	 * 
+	 * @param user The user to search for
+	 * @param admin If administrator search with user name
+	 * @return Itself
+	 */
+	public MembersWizardPage searchOneMember(UserVO user, boolean admin) {
+		searchMemberForm(user, admin);
+
+		// select the identity
+		By selectAll = By.xpath("//div[contains(@class,'modal')]//div[contains(@class,'o_table_flexi')]/table//tr[td[text()[contains(.,'" + user.getFirstName() + "')]]]/td/a[contains(@onclick,'select')]");
+		OOGraphene.waitElement(selectAll, browser);
+		if(browser instanceof FirefoxDriver) {
+			OOGraphene.waitingALittleLonger();// link is obscured by the scroll bar
+		}
+		browser.findElement(selectAll).click();
+		OOGraphene.waitBusy(browser);
+		return this;
+	}
+	
+	private MembersWizardPage searchMemberForm(UserVO user, boolean admin) {
+		//Search by username
+		By usernameBy = By.cssSelector(".o_sel_usersearch_searchform input[type='text']");
+		OOGraphene.waitElement(usernameBy, browser);
+		
+		List<WebElement> searchFields = browser.findElements(usernameBy);
+		Assert.assertFalse(searchFields.isEmpty());
+		String search = admin ? user.getLogin() : user.getFirstName();
+		searchFields.get(0).sendKeys(search);
+
+		try {
+			By searchBy = By.cssSelector(".o_sel_usersearch_searchform a.btn-default");
+			OOGraphene.clickAndWait(searchBy, browser);
+		} catch (Exception e) {
+			OOGraphene.takeScreenshot("Search member", browser);
+			throw e;
+		}
+		return this;
+	}
+	
 	
 	public MembersWizardPage setMembers(UserVO... users) {
 		StringBuilder sb = new StringBuilder();
@@ -122,22 +154,56 @@ public class MembersWizardPage {
 		if(owner) {
 			By ownerBy = By.cssSelector("label input[name='repoRights'][type='checkbox'][value='owner']");
 			WebElement ownerEl = browser.findElement(ownerBy);
-			OOGraphene.check(ownerEl, new Boolean(owner));
+			OOGraphene.check(ownerEl, Boolean.valueOf(owner));
 			OOGraphene.waitBusyAndScrollTop(browser);
 		}
 		
 		if(coach) {
 			By coachBy = By.cssSelector("label input[name='repoRights'][type='checkbox'][value='tutor']");
 			WebElement coachEl = browser.findElement(coachBy);
-			OOGraphene.check(coachEl, new Boolean(coach));
+			OOGraphene.check(coachEl, Boolean.valueOf(coach));
 			OOGraphene.waitBusyAndScrollTop(browser);
 		}
 		
 		By participantBy = By.cssSelector("label input[name='repoRights'][type='checkbox'][value='participant']");
 		WebElement participantEl = browser.findElement(participantBy);
-		OOGraphene.check(participantEl, new Boolean(participant));
+		OOGraphene.check(participantEl, Boolean.valueOf(participant));
 		OOGraphene.waitBusyAndScrollTop(browser);
 		return this;
+	}
+	
+	public MembersWizardPage selectRepositoryEntryRoleNG(boolean owner, boolean coach, boolean participant) {
+		if(owner) {
+			select("owner", true);
+		}
+		if(coach) {
+			select("coach", true);
+		}
+		select("participant", participant);
+		return this;
+	}
+	
+	private void select(String role, boolean add) {
+		String cmpXpath = "//div[contains(@class,'o_sel_role_" + role + "')]//div[contains(@class,'o_addremove')]/a";	
+		if(add) {
+			By activeAddBy = By.xpath(cmpXpath + "[contains(@class,'o_addremove_add_active')]");
+			List<WebElement> activeAddEls = browser.findElements(activeAddBy);
+			if(activeAddEls.isEmpty()) {
+				By addBy = By.xpath(cmpXpath + "[contains(@class,'o_sel_add')]");
+				browser.findElement(addBy).click();
+				OOGraphene.waitBusyAndScrollTop(browser);
+				OOGraphene.waitElement(activeAddBy, browser);
+			}
+		} else {
+			By activeRemoveBy = By.xpath(cmpXpath + "[contains(@class,'o_addremove_remove_active')]");
+			List<WebElement> activeRemoveEls = browser.findElements(activeRemoveBy);
+			if(activeRemoveEls.isEmpty()) {
+				By removeBy = By.xpath(cmpXpath + "[contains(@class,'o_sel_remove')]");
+				browser.findElement(removeBy).click();
+				OOGraphene.waitBusyAndScrollTop(browser);
+				OOGraphene.waitElement(activeRemoveBy, browser);
+			}
+		}
 	}
 	
 	public MembersWizardPage selectGroupAsParticipant(String groupName) {
